--- a/event_entry/src/styles/app.scss
+++ b/event_entry/src/styles/app.scss
@@ -2,7 +2,7 @@
 .App {
     margin: 0; 
     padding: 0; 
-    background-image: url('../images/sro_background.png'); 
+    background-image: url('../images/GT.png'); 
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
