--- a/event_entry/src/styles/orderForm.scss
+++ b/event_entry/src/styles/orderForm.scss
@@ -1,11 +1,19 @@
 .order_form_container {
     height: 80vh;
     width: 60vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .MuiButton-root {
+        max-width: 100px;
+        min-width: 75px;
+    }
 
     .ticket_type {
         display: flex;
         flex-direction: column;
-        height: 100%;
+        height: 80%;
         width: 100%;
 
         &__radios {
