target comp nav buttons set display and gap. target input type radio and set magrgin right

--- a/event_entry/src/styles/orderForm.scss
+++ b/event_entry/src/styles/orderForm.scss
@@ -10,7 +10,12 @@
         min-width: 75px;
     }
 
-    .ticket_type {
+    .comp_nav_buttons {
+        display: flex;
+        gap: 50px;
+    }
+
+    .ticket_type, .series_select {
         display: flex;
         flex-direction: column;
         height: 80%;
@@ -24,6 +29,10 @@
             font-size: large;
             font-weight: bold;
             height: 70%;
+
+            input[type="radio"] {
+                margin-right: 5%; 
+              }
         }
     }
 
