change target of ticket_type and event select to be just select

--- a/event_entry/src/styles/orderForm.scss
+++ b/event_entry/src/styles/orderForm.scss
@@ -15,7 +15,7 @@
         gap: 50px;
     }
 
-    .ticket_type, .series_select {
+    .select {
         display: flex;
         flex-direction: column;
         height: 80%;
