--- a/event_entry/src/styles/orderForm.scss
+++ b/event_entry/src/styles/orderForm.scss
@@ -10,6 +10,7 @@
         min-width: 75px;
     }
 
+    //** For Comp Nav component */
     .comp_nav_buttons {
         display: flex;
         gap: 50px;
@@ -46,6 +47,7 @@
 
     }
 
+    //** For Event, Series component*/
     .select {
         display: flex;
         flex-direction: column;
