add target for team info class, and set flex direction, display, h/w, justify content and aling, and gap

--- a/event_entry/src/styles/orderForm.scss
+++ b/event_entry/src/styles/orderForm.scss
@@ -77,6 +77,17 @@
         }
     }
 
+    // Team and Number Component ////
+    .team_info {
+        flex-direction: column;
+        display: flex;
+        height: 80%;
+        width: 80%;
+        justify-content: center;
+        align-items: center;
+        gap: 5%;
+    }
+
     .input {
         /* Chrome, Safari, Edge, Opera */
         input::-webkit-outer-spin-button,
