--- a/event_entry/src/styles/orderForm.scss
+++ b/event_entry/src/styles/orderForm.scss
@@ -86,6 +86,27 @@
         justify-content: center;
         align-items: center;
         gap: 5%;
+        
+        .input__team {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: larger;
+            font-weight: bold;
+
+            select {
+                width: 60%;
+                height: 50px;
+                font-size: large;
+            }
+
+            input {
+                width: 20%;
+                height: 50px;
+                font-size: larger;
+            }
+        }
     }
 
     .input {
