set sepcific targets for event list line height

--- a/event_entry/src/styles/orderForm.scss
+++ b/event_entry/src/styles/orderForm.scss
@@ -58,7 +58,8 @@
                 }
             }
 
-            &__div, .event {
+            &__event .click_box__div,
+            &__div.event {
                 line-height: 150%;
             }
         }
