replace container targets with click_component

--- a/event_entry/src/styles/orderForm.scss
+++ b/event_entry/src/styles/orderForm.scss
@@ -18,7 +18,7 @@
     }
 
     //** Ticket Type components */
-    .ticket_type_container, .series_container, .click_component {
+    .click_component {
         height: 100%;
         width: 100%;
         align-items: center;
