--- a/event_entry/src/styles/orderForm.scss
+++ b/event_entry/src/styles/orderForm.scss
@@ -96,6 +96,21 @@
         justify-content: center;
         align-items: center;
         gap: 5%;
+
+        .sponsors {
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+            font-size: larger;
+            font-weight: bold;
+            flex-direction: column;
+            height: 100px;
+
+            input {
+                height: 60%;
+                font-size: larger;
+            }
+        }
         
         .input__team {
             width: 100%;
