change input target in sponsors to be textarea and add overflow and resize

--- a/event_entry/src/styles/orderForm.scss
+++ b/event_entry/src/styles/orderForm.scss
@@ -106,9 +106,10 @@
             flex-direction: column;
             height: 100px;
 
-            input {
+            textarea {
                 height: 60%;
-                font-size: larger;
+                overflow: auto;
+                resize: both;
             }
         }
         
