change inputn target to be __number. add input to select styling

--- a/event_entry/src/styles/orderForm.scss
+++ b/event_entry/src/styles/orderForm.scss
@@ -121,14 +121,14 @@
             font-size: larger;
             font-weight: bold;
 
-            select {
+            select, input {
                 width: 60%;
                 height: 50px;
                 font-size: large;
             }
 
-            input {
-                width: 20%;
+            &__number {
+                width: 20% !important;
                 height: 50px;
                 font-size: larger;
             }
