change &__eventOrder to be &__event

--- a/event_entry/src/styles/orderForm.scss
+++ b/event_entry/src/styles/orderForm.scss
@@ -58,7 +58,7 @@
 				}
 			}
 
-			&__eventOrder .click_box__div,
+			&__event .click_box__div,
 			&__div.eventOrder {
 				line-height: 150%;
 			}
