inside input target driver info container and set display, gap, width and justify content

--- a/event_entry/src/styles/orderForm.scss
+++ b/event_entry/src/styles/orderForm.scss
@@ -105,6 +105,13 @@
 			width: 60%;
 		}
 
+		.driver_info_container {
+			display: flex;
+			gap: 10%;
+			width: 100%;
+			justify-content: space-around;
+		}
+
 		.sponsors {
 			width: 100%;
 			display: flex;
