--- a/event_entry/src/styles/orderForm.scss
+++ b/event_entry/src/styles/orderForm.scss
@@ -166,3 +166,25 @@
 		}
 	}
 }
+
+.input__series {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	font-size: larger;
+	font-weight: bold;
+
+	select,
+	input {
+		width: 60%;
+		height: 50px;
+		font-size: large;
+	}
+
+	&__number {
+		width: 20% !important;
+		height: 50px;
+		font-size: larger;
+	}
+}
