--- a/event_entry/src/styles/rental.scss
+++ b/event_entry/src/styles/rental.scss
@@ -9,10 +9,23 @@
 	.team_info {
 		flex-direction: column;
 		display: flex;
-		height: 80%;
+		height: 60%;
 		width: 60%;
 		justify-content: center;
 		align-items: center;
 		gap: 5%;
+	}
+	.rental__checkbox_container {
+		display: flex;
+		width: 100%;
+		justify-content: space-between;
+
+		.cable_checkbox {
+			display: flex;
+			width: 25%;
+			gap: 5%;
+			align-items: center;
+			font-size: large;
+		}
 	}
 }
